# libmtg

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dd-goldfish.html  decklist_4pt_sanity.txt  deploy.sh  index.html
.github/: auto-card-pipeline.org
.github/workflows/: auto-card.yml
apps/libmtg-doomsday/: Cargo.toml
apps/libmtg-doomsday/examples/: sample_hands.rs
apps/libmtg-doomsday/src/: lib.rs  main.rs  objective.rs  planner.rs  strategy.rs  tests.rs  web.rs
apps/libmtg-doomsday/src/goldfish/: learned_gen.rs  learned_mull.rs  mod.rs  mull.rs  recipe.rs  strategy.rs
apps/libmtg-doomsday/web/: dd-goldfish.html  example-analysis.md  hands.html  index.html  london-ponder-paradox.md  pilegen.html  tempo-dd-speedup.md  writeup-flex-slots.html  writeup-london-ponder-paradox-6-22-26.html  writeup-tempo-dd-speedup-6-22-26.html  writeups.html
crates/dd-goldfish/: Cargo.toml
crates/dd-goldfish/src/: lib.rs  main.rs  recipe.rs  strategy.rs
crates/decklist/: Cargo.toml
crates/decklist/src/: lib.rs
crates/doomsday/: Cargo.toml
crates/doomsday/src/: lib.rs  objective.rs  planner.rs  strategy.rs  tests.rs
crates/libmtg/: Cargo.toml
crates/libmtg-decklist/: Cargo.toml
crates/libmtg-decklist/src/: fetch.rs
crates/libmtg-engine/: Cargo.toml
crates/libmtg-engine/src/: CARD_INDEX.org  DESIGN.org  STRATEGY.org  card_defs.rs  catalog.rs  effects.rs  lib.rs  predicates.rs  snapshot.rs  strategy.rs  tests.rs
crates/libmtg-engine/src/ir/: ability.rs  action.rs  ce.rs  cost_exec.rs  executor.rs  expr.rs  mod.rs  tests.rs
crates/libmtg/src/: lib.rs
crates/mtg-engine/: Cargo.toml
crates/mtg-engine/src/: DESIGN.org  card_defs.rs  catalog.rs  effects.rs  lib.rs  objective.rs  planner.rs  playable.rs  predicates.rs  strategy.rs  tests.rs
crates/mtg-engine/src/ir/: ability.rs  action.rs  ce.rs  context.rs  cost.rs  cost_exec.rs  event_log.rs  executor.rs  expr.rs  mod.rs  tests.rs
crates/pilegen/: Cargo.toml
crates/pilegen/src/: CARD_INDEX.org  effects.rs  lib.rs  planner.rs  snapshot.rs
crates/pilegen/src/ir/: ability.rs  cost_exec.rs  executor.rs  mod.rs  tests.rs
