[package]
name = "libmtg-doomsday"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Doomsday (Magic: The Gathering) content + apps — strategy, planner, goldfish simulator (CLI + web), and pile builder — built on libmtg-engine."

# cdylib → the wasm frontend (built with `--no-default-features`); rlib → CLI bin + tests.
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dd-goldfish"
path = "src/main.rs"
# The binary is the native CLI; never built for wasm.
required-features = ["cli"]

[features]
default = ["cli"]
# Native CLI: arg parsing, terminal plots, and URL decklist resolvers. `ureq`
# (via `libmtg-decklist/fetch`) and `textplots` don't build for wasm, so the wasm
# frontend builds with `--no-default-features` to drop this whole set.
cli = ["dep:clap", "dep:textplots", "libmtg-decklist/fetch"]

[dependencies]
libmtg-engine = { path = "../../crates/libmtg-engine" }
# Base `libmtg-decklist` (text parsing) is wasm-safe; the native-only `fetch`
# resolvers come in via the `cli` feature.
libmtg-decklist = { path = "../../crates/libmtg-decklist" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI-only.
clap = { version = "4.5", features = ["derive"], optional = true }
textplots = { version = "0.8", optional = true }

# wasm randomness (rand → getrandom) + bindings for the web frontend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
