[package]
name = "dd-goldfish"
version = "0.1.0"
edition = "2021"

# Goldfish Monte-Carlo simulator for Doomsday: drop the opponent, race to cast
# Doomsday, measure how fast (cast-turn distribution) and with how many layers of
# protection in hand. Baseline reuses `DoomsdayStrategy`; the wasm cdylib + web
# frontend + URL decklist input come in a later step.

# cdylib → the wasm frontend (built with `--no-default-features`); rlib → CLI bin + tests.
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dd-goldfish"
path = "src/main.rs"
# The binary is the native CLI; never built for wasm.
required-features = ["cli"]

[features]
default = ["cli"]
# Native CLI: arg parsing, terminal plots, and URL decklist resolvers. `ureq`
# (via `decklist/fetch`) and `textplots` don't build for wasm, so the wasm
# frontend builds with `--no-default-features` to drop this whole set.
cli = ["dep:clap", "dep:textplots", "decklist/fetch"]

[dependencies]
mtg-engine = { path = "../mtg-engine" }
doomsday = { path = "../doomsday" }
# Base `decklist` (text parsing) is wasm-safe; the native-only `fetch` resolvers
# come in via the `cli` feature.
decklist = { path = "../decklist" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI-only.
clap = { version = "4.5", features = ["derive"], optional = true }
textplots = { version = "0.8", optional = true }

# wasm randomness (rand → getrandom) needs the JS backend in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
