[package]
name = "libmtg-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A generic, reusable rules engine for Magic: The Gathering."

[lib]
crate-type = ["rlib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The engine has no wasm bindings of its own (those live in the doomsday app
# crate); getrandom's js backend is still needed so `rand` works when the engine
# is compiled to wasm as a dependency of a wasm app.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
