[package]
name = "mtg-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Engine has no wasm bindings (those live in the pilegen app crate); getrandom's
# js backend is still needed so `rand` works when the engine is compiled to wasm
# as a dependency of a wasm app.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
